@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=System Log
-_Comment=View the system log file
+_Comment=View or monitor system log files
 Exec=gnome-system-log
 Icon=logviewer
 Terminal=false
@@ -12,3 +12,4 @@ X-GNOME-DocPath=gnome-system-log/gnome-system-log.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
 X-GNOME-Bugzilla-Component=logview
+X-GNOME-Bugzilla-Version=@VERSION@
